design fixes on the overlapping text

--- a/css/style.css
+++ b/css/style.css
@@ -639,6 +639,7 @@ button a {
           transform: translate(-50%, -40%);
   color: black;
   z-index: 2;
+  font-size: 20px;
 }
 
 .p-3 {
