--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -288,6 +288,7 @@ button {
     transform: translate(-50%, -40%);
     color: black;
     z-index: 2;
+    font-size: 20px;
   }
 }
 
